feat: fix issue with many stacks in upstream cdk-express-pipelines, make boostrap run in parallel, removed execa

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -80,9 +80,8 @@ for more information.
 [Tagging](/components/account-management/tagging) for details.
 5. **AWS Organization**: Provide details about your AWS Organization, including the Organization ID, OU IDs, and
 Account IDs. Copy the IDs of accounts created by Control Tower, such as the management, security log, and security
-audit accounts. Additional accounts can be created manually or moved under the Workloads OU. For more details, see
-[AWS Organization](/components/account-management/aws-organization). In the code snippet below, we define a single
-development account.
+audit accounts. Additional accounts can be created manually or moved under the Workloads OU.. In the code snippet
+below, we define a single development account.
 
 <DualCode>
   <Fragment slot="ts">
